--- a/v3/borrow/collateral.4.html
+++ b/v3/borrow/collateral.4.html
@@ -66,7 +66,7 @@
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
                     <div class="col-12 col-lg-7 col-xxl-6">
-                        <div class="bg-body p-3 pb-4 rounded shadow">
+                        <div class="bg-body p-4 pt-3 rounded shadow">
                             <div class="d-flex align-items-center">
                                 <h2 class="mb-1 me-auto">Collateral</h2>
                                 <button type="button" class="btn-close" aria-label="Close"></button>
@@ -74,17 +74,18 @@
                             <div class="text-body-tertiary fs-5 mb-4">ETH Market</div>
 
                             <div class="shadow rounded p-3 mb-4">
-                                <div class="d-flex justify-content-between align-items-center mb-3">
+                                <div class="d-flex justify-content-between align-items-start mb-5">
                                     <div class="d-flex align-items-center justify-content-start">
-                                        <img src="../../image/assets/wstETH.svg" alt="USDC" width="40">
-                                        <div class="ps-2">
-                                            <div>wstETH</div>
-                                            <small class="text-body-tertiary">Lido wrapped staked ether</small>
+                                        <img src="../../image/assets/wstETH.svg" alt="USDC" width="48">
+                                        <div style="padding-left: 0.7rem;">
+                                            <div class="fs-5 fw-medium">wstETH</div>
+                                            <div class="fs-6 text-body-secondary">Lido wrapped staked ether</div>
                                         </div>
                                     </div>
                                     <div class="text-center">
-                                        <div>Your balance</div> 
-                                        <div class="text-body-tertiary">2 <small class="ps-2 opacity-75">($3400)</small></div>
+                                        <div class="fw-medium">Your balance</div> 
+                                        <div class="text-body-secondary">2.657</div>
+                                        <div class="text-body-tertiary" style="font-size: 75%;">$3.40K</div>
                                     </div>
                                     <div class="d-flex flex-column">
                                         <button type="button" class="btn btn-primary text-white btn-sm mb-2">Deposit</button>
@@ -93,8 +94,7 @@
                                 </div>
                                 <div class="d-flex text-body-secondary text-center small">
                                     <div class="flex-fill border-end p-2">Loan to value : <span class="opacity-75">80%</span></div>
-                                    <div class="flex-fill border-end p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
-                                    <div class="flex-fill p-2">Liquidation penalty : <span class="opacity-75">10%</span></div>
+                                    <div class="flex-fill p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
                                 </div>
                             </div>
 
