--- a/v3/farm/supply.2.html
+++ b/v3/farm/supply.2.html
@@ -65,33 +65,33 @@
             </div>
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
-                    <div class="col-12 col-lg-7 col-xxl-6">
+                    <div class="col-12 col-lg-5">
                         <div class="bg-body p-3 rounded shadow mb-4">
-                            <h2 class="mb-4">Borrow</h2>
-                            <div class="d-flex border align-items-center p-3 rounded mb-2">
+                            <div class="d-flex align-items-center mb-4">
+                                <h2 class="me-auto">Supply</h2>
+                                <button type="button" class="btn-close" aria-label="Close"></button>
+                            </div>
+                            <div class="d-flex border p-3 rounded mb-4">
                                 <div class="flex-grow-1">
                                     <h1 class="m-0">0</h1>
-                                    <small  class="text-body-tertiary">$0.00</small>
+                                    <small class="text-body-tertiary">$0.00</small>
                                 </div>
-                                <button type="button" class="btn btn-lg btn-light border border-light-subtle rounded-4">
-                                    <div class="d-flex align-items-center">
-                                        <img src="../../image/assets/USDC.svg" alt="USDC" width="40"> 
-                                        <span class="px-3">USDC</span> 
-                                        <i class="bi bi-chevron-down"></i>
+                                <div class="d-flex flex-column align-items-center">
+                                    <button type="button" class="btn btn-light border border-light-subtle rounded-4 mb-2">
+                                        <div class="d-flex align-items-center">
+                                            <img src="../../image/assets/USDC.svg" alt="USDC" width="30"> 
+                                            <div class="px-3">USDC</div> 
+                                        </div>
+                                    </button>
+                                    <div class="d-flex small">
+                                        <div class="px-2 text-body-secondary border-end">Wallet : <span class="text-body-tertiary">$14.43K</span></div>
+                                        <div class="px-2"><a href="#" class="text-decoration-none">Max</a></div>
                                     </div>
-                                </button>
-                            </div>
-                            <div class="d-flex flex-wrap justify-content-between mb-4">
-                                <div>
-                                    <div class="mb-1">Emprunt maximal : <span class="text-body-tertiary">800 USDC</span></div>
-                                    <a href="#" class="small text-decoration-none">Augmenter votre capacité d'emprunt <i class="bi bi-arrow-right"></i></a>
-                                </div>
-                                <div class="d-flex align-items-start">
-                                    <small class="px-2 py-1 me-1 border rounded">Borrow APR : <span class="text-body-tertiary">4.12%</span></small>
                                 </div>
                             </div>
+
                             <div class="d-grid">
-                                <button class="btn btn-lg btn-primary text-white" type="button">Borrow USDC</button>
+                                <button class="btn btn-lg btn-primary text-white" type="button">Supply USDC</button>
                               </div>
                         </div>
                     </div>
