--- a/v3/farm/supply.html
+++ b/v3/farm/supply.html
@@ -68,58 +68,34 @@
                     <div class="col-12 col-lg-5">
                         <div class="bg-body p-3 rounded shadow mb-4">
                             <div class="d-flex align-items-center mb-4">
-                                <h2 class="me-auto">Select asset</h2>
+                                <h2 class="me-auto">Supply</h2>
                                 <button type="button" class="btn-close" aria-label="Close"></button>
                             </div>
-
-                            <div class="mb-2">
-
-                                <div class="bg-body-tertiary rounded p-3">
-                                    <div class="d-flex justify-content-between align-items-center mb-3">
-                                        <div class="d-flex justify-content-start">
-                                            <img src="../../image/assets/USDC.svg" alt="USDC" width="40">
-                                            <div class="ps-2">
-                                                <div>USDC</div>
-                                                <small class="text-body-tertiary">USD Coin</small>
-                                            </div>
-                                        </div>
-                                        <div>
-                                            <div>Borrow APR</div> 
-                                            <div class="text-body-tertiary text-center">7.39%</div>
-                                        </div>
-                                    </div>
-
-                                    <div class="d-flex justify-content-center align-items-center text-body-secondary small">
-                                        <div class="me-1">Collaterals</div> 
-                                        <div  class="text-body-tertiary" style="padding-top: 3px;"><i class="bi bi-caret-down-fill"></i></div>
-                                    </div>
+                            <div class="d-flex border p-3 rounded mb-2">
+                                <div class="flex-grow-1">
+                                    <h1 class="m-0">0</h1>
+                                    <small class="text-body-tertiary">$0.00</small>
                                 </div>
-
-                                <div class="border-bottom border-light-subtle my-4"></div>
-
-                                <div  class="bg-body-tertiary rounded p-3">
-                                    <div class="d-flex justify-content-between align-items-center mb-3">
-                                        <div class="d-flex justify-content-start">
-                                            <img src="../../image/assets/ETH.svg" alt="ETH" width="40">
-                                            <div class="ps-2">
-                                                <div>ETH</div>
-                                                <small class="text-body-tertiary">Ether</small>
-                                            </div>
+                                <div>
+                                    <button type="button" class="btn btn-light border border-light-subtle rounded-4 mb-2">
+                                        <div class="d-flex align-items-center">
+                                            <img src="../../image/assets/USDC.svg" alt="USDC" width="30"> 
+                                            <span class="px-3">USDC</span> 
                                         </div>
-                                        <div>
-                                            <div>Borrow APR</div> 
-                                            <div class="text-body-tertiary text-center">7.39%</div>
-                                        </div>
-                                    </div>
-
-                                    <div class="d-flex justify-content-center align-items-center text-body-secondary small">
-                                        <div class="me-1">Collaterals</div> 
-                                        <div class="text-body-tertiary" style="padding-top: 3px;"><i class="bi bi-caret-down-fill"></i></div>
-                                    </div>
+                                    </button>
+                                    <div class="text-center text-body-secondary small">Wallet : <span class="text-body-tertiary">$1.43K</span></div>
                                 </div>
-
+                            </div>
+                            <div class="row g-2 mb-4">
+                                <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">25%</button></div>
+                                <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">50%</button></div>
+                                <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">75%</button></div>
+                                <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">Max</button></div>
                             </div>
 
+                            <div class="d-grid">
+                                <button class="btn btn-lg btn-primary text-white" type="button">Supply USDC</button>
+                              </div>
                         </div>
                     </div>
                 </div>
