--- a/index.html
+++ b/index.html
@@ -19,25 +19,24 @@
         <ul>
           <li>Borrow
             <ul>
-              <li><a href="v3/borrow/borrow.html">Main #1</a></li>
-              <li><a href="v3/borrow/borrow.2.html">Main #2</a></li>
-              <li><a href="v3/borrow/borrow.3.html">Main #3</a></li>
               <li><a href="v3/borrow/borrow.4.html">Main #4</a></li>
-              <li><a href="v3/borrow/select-asset.html">Select asset #1</a></li>
               <li><a href="v3/borrow/select-asset.2.html">Select asset #2</a></li>
-              <li><a href="v3/borrow/select-asset.3.html">Select asset #3</a></li>
               <li><a href="v3/borrow/select-asset.4.html">Select asset #4</a></li>
-              <li><a href="v3/borrow/collateral.html">Manage collateral #1</a></li>
+              <li><a href="v3/borrow/collateral.3.html">Manage collateral #3</a></li>
+              <li><a href="v3/borrow/collateral.4.html">Manage collateral #4</a></li>
             </ul>
           </li>
         </ul>
 
         <ul>
-          <li>Lend
+          <li>Farm
             <ul>
-              <li><a href="v3/lend/assets-list.html">Assets list #1</a></li>
-              <li><a href="v3/lend/assets-list.2.html">Assets list #2</a></li>
-              <li>Lend asset</li>
+              <li><a href="v3/farm/assets-list.html">Assets list #1</a></li>
+              <li><a href="v3/farm/assets-list.2.html">Assets list #2</a></li>
+              <li><a href="v3/farm/assets-list.3.html">Assets list #3</a></li>
+              <li><a href="v3/farm/supply.html">Supply #1</a></li>
+              <li><a href="v3/farm/supply.2.html">Supply #2</a></li>
+              <li><a href="v3/farm/supply.3.html">Supply #3</a></li>
             </ul>
           </li>
         </ul>
