--- a/v3/farm/supply.3.html
+++ b/v3/farm/supply.3.html
@@ -66,65 +66,49 @@
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
                     <div class="col-12 col-lg-5">
-                        <div class="bg-body p-3 rounded shadow mb-4">
-                            <div class="d-flex align-items-center mb-4">
-                                <h2 class="me-auto">Select asset</h2>
-                                <button type="button" class="btn-close" aria-label="Close"></button>
+                        <div class="card shadow">
+                            <div class="card-header">
+                              <ul class="nav nav-tabs card-header-tabs">
+                                <li class="nav-item">
+                                  <a class="nav-link fs-5 active" aria-current="true" href="#">Supply USDC</a>
+                                </li>
+                                <li class="nav-item me-auto">
+                                  <a class="nav-link fs-5" href="#">Withdraw USDC</a>
+                                </li>
+                                <li class="nav-item align-self-center">
+                                    <button type="button" class="btn-close" aria-label="Close"></button>
+                                </li>
+                              </ul>
                             </div>
-
-                            <div class="mb-2">
-
-                                <div class="bg-body-tertiary rounded p-3">
-                                    <div class="d-flex justify-content-between align-items-center mb-3">
-                                        <div class="d-flex justify-content-start">
-                                            <img src="../../image/assets/USDC.svg" alt="USDC" width="40">
-                                            <div class="ps-2">
-                                                <div>USDC</div>
-                                                <small class="text-body-tertiary">USD Coin</small>
-                                            </div>
-                                        </div>
-                                        <div>
-                                            <div>Borrow APR</div> 
-                                            <div class="text-body-tertiary text-center">7.39%</div>
-                                        </div>
+                            <div class="card-body">
+                                <div class="d-flex border p-3 rounded mb-2">
+                                    <div class="flex-grow-1">
+                                        <h1 class="m-0">0</h1>
+                                        <small class="text-body-tertiary">$0.00</small>
                                     </div>
-
-                                    <div class="text-center small">
-                                        <div class="text-body-secondary mb-1">Collaterals</div>
-                                        <div class="text-body-tertiary">
-                                            WBTC <strong class="px-1">·</strong> ETH <strong class="px-1">·</strong> COMP <strong class="px-1">·</strong> UNI <strong class="px-1">·</strong> LINK
-                                        </div>
+                                    <div>
+                                        <button type="button" class="btn btn-light border border-light-subtle rounded-4 mb-2">
+                                            <div class="d-flex align-items-center">
+                                                <img src="../../image/assets/USDC.svg" alt="USDC" width="30"> 
+                                                <span class="px-3">USDC</span> 
+                                            </div>
+                                        </button>
+                                        <div class="text-center text-body-secondary small">Wallet : <span class="text-body-tertiary">$1.43K</span></div>
                                     </div>
                                 </div>
-
-                                <div class="border-bottom border-light-subtle my-4"></div>
-
-                                <div  class="bg-body-tertiary rounded p-3">
-                                    <div class="d-flex justify-content-between align-items-center mb-3">
-                                        <div class="d-flex justify-content-start">
-                                            <img src="../../image/assets/ETH.svg" alt="ETH" width="40">
-                                            <div class="ps-2">
-                                                <div>ETH</div>
-                                                <small class="text-body-tertiary">Ether</small>
-                                            </div>
-                                        </div>
-                                        <div>
-                                            <div>Borrow APR</div> 
-                                            <div class="text-body-tertiary text-center">7.39%</div>
-                                        </div>
-                                    </div>
-
-                                    <div class="text-center small">
-                                        <div class="text-body-secondary mb-1">Collaterals</div> 
-                                        <div class="text-body-tertiary">
-                                            wstETH <strong class="px-1">·</strong> cbETH
-                                        </div>
-                                    </div>
+                                <div class="row g-2 mb-4">
+                                    <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">25%</button></div>
+                                    <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">50%</button></div>
+                                    <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">75%</button></div>
+                                    <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">Max</button></div>
                                 </div>
-
+    
+                                <div class="d-grid">
+                                    <button class="btn btn-lg btn-primary text-white" type="button">Supply</button>
+                                </div>
                             </div>
-
                         </div>
+
                     </div>
                 </div>
             </div>
