--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               <li><a href="v3/borrow/select-asset.4.html">Select asset #4</a></li>
               <li><a href="v3/borrow/collateral.3.html">Manage collateral #3</a></li>
               <li><a href="v3/borrow/collateral.4.html">Manage collateral #4</a></li>
+              <li><a href="v3/borrow/collateral.5.html">Manage collateral #5</a></li>
             </ul>
           </li>
         </ul>
@@ -37,6 +38,16 @@
               <li><a href="v3/farm/supply.html">Supply #1</a></li>
               <li><a href="v3/farm/supply.2.html">Supply #2</a></li>
               <li><a href="v3/farm/supply.3.html">Supply #3</a></li>
+              <li><a href="v3/farm/withdraw.html">Withdraw #1</a></li>
+              <li><a href="v3/farm/withdraw.2.html">Withdraw #2</a></li>              
+            </ul>
+          </li>
+        </ul>
+
+        <ul>
+          <li>Claim
+            <ul>
+              <li><a href="v3/claim/claim.html">Claim</a></li>
             </ul>
           </li>
         </ul>
