--- a/v3/farm/supply.2.html
+++ b/v3/farm/supply.2.html
@@ -84,8 +84,8 @@
                                         </div>
                                     </button>
                                     <div class="d-flex small">
-                                        <div class="px-2 text-body-secondary border-end">Wallet : <span class="text-body-tertiary">$14.43K</span></div>
-                                        <div class="px-2"><a href="#" class="text-decoration-none">Max</a></div>
+                                        <div class="pe-1 text-body-secondary">Wallet : <span class="text-body-tertiary">$14.43K</span></div>
+                                        <div class="ps-1"><a href="#" class="fw-semibold text-decoration-none">MAX</a></div>
                                     </div>
                                 </div>
                             </div>
