--- a/v3/borrow/collateral.5.html
+++ b/v3/borrow/collateral.5.html
@@ -52,7 +52,6 @@
                         <li class="nav-item"><a aria-current="page" class="nav-link invest active" href="#/"><i class="bi bi-box-arrow-down me-1"></i> Borrow</a></li>
                         <li class="nav-item"><a class="nav-link" href="#/farm"><i class="bi bi-flower2 me-1"></i> Farm</a></li>
                         <li class="nav-item"><a class="nav-link" href="#/claim"><i class="bi bi-stars me-1"></i> Claim</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#/dashboard"><i class="bi bi-list-task me-1"></i> Dashboard</a></li>
                     </ul>
                     <hr class="text-primary">
                     <div id="compound-links" class="d-flex justify-content-around fs-4">
@@ -71,7 +70,7 @@
                                 <h2 class="mb-1 me-auto">Collateral</h2>
                                 <button type="button" class="btn-close" aria-label="Close"></button>
                             </div>
-                            <div class="text-body-tertiary fs-5 mb-4">ETH Market</div>
+                            <div class="text-body-tertiary mb-4">ETH Market</div>
 
                             <div class="shadow rounded p-3 mb-4">
                                 <div class="d-flex justify-content-between align-items-start mb-4">
@@ -93,8 +92,8 @@
                                     </div>
                                 </div>
                                 <div class="d-flex text-body-secondary text-center small">
-                                    <div class="flex-fill border-end p-2">Loan to value : <span class="opacity-75">80%</span></div>
-                                    <div class="flex-fill p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
+                                    <div class="border-end p-2 pe-4">Loan to value : <span class="opacity-75">80%</span></div>
+                                    <div class="p-2 ps-4">Liquidation threshold : <span class="opacity-75">85%</span></div>
                                 </div>
                             </div>
 
@@ -117,9 +116,8 @@
                                     </div>
                                 </div>
                                 <div class="d-flex text-body-secondary text-center small">
-                                    <div class="flex-fill border-end p-2">Loan to value : <span class="opacity-75">80%</span></div>
-                                    <div class="flex-fill border-end p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
-                                    <div class="flex-fill p-2">Liquidation penalty : <span class="opacity-75">10%</span></div>
+                                    <div class="border-end p-2">Loan to value : <span class="opacity-75">80%</span></div>
+                                    <div class="p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
                                 </div>
                             </div>
 
