--- a/v3/farm/supply.3.html
+++ b/v3/farm/supply.3.html
@@ -70,10 +70,10 @@
                             <div class="card-header">
                               <ul class="nav nav-tabs card-header-tabs">
                                 <li class="nav-item">
-                                  <a class="nav-link fs-5 active" aria-current="true" href="#">Supply USDC</a>
+                                  <a class="nav-link fw-semibold active" aria-current="true" href="#">Supply USDC</a>
                                 </li>
                                 <li class="nav-item me-auto">
-                                  <a class="nav-link fs-5" href="#">Withdraw USDC</a>
+                                  <a class="nav-link" href="#">Withdraw USDC</a>
                                 </li>
                                 <li class="nav-item align-self-center">
                                     <button type="button" class="btn-close" aria-label="Close"></button>
