--- a/v3/farm/withdraw.html
+++ b/v3/farm/withdraw.html
@@ -52,7 +52,6 @@
                         <li class="nav-item"><a aria-current="page" class="nav-link invest active" href="#/"><i class="bi bi-box-arrow-down me-1"></i> Borrow</a></li>
                         <li class="nav-item"><a class="nav-link" href="#/farm"><i class="bi bi-flower2 me-1"></i> Farm</a></li>
                         <li class="nav-item"><a class="nav-link" href="#/claim"><i class="bi bi-stars me-1"></i> Claim</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#/dashboard"><i class="bi bi-list-task me-1"></i> Dashboard</a></li>
                     </ul>
                     <hr class="text-primary">
                     <div id="compound-links" class="d-flex justify-content-around fs-4">
@@ -65,64 +64,37 @@
             </div>
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
                 <div class="row">
-                    <div class="col-12 col-lg-7 col-xxl-6">
-                        <div class="bg-body p-4 pt-3 rounded shadow">
-                            <div class="d-flex align-items-center">
-                                <h2 class="mb-1 me-auto">Collateral</h2>
+                    <div class="col-12 col-lg-5">
+                        <div class="bg-body p-3 rounded shadow mb-4">
+                            <div class="d-flex align-items-center mb-4">
+                                <h2 class="me-auto">Withdraw</h2>
                                 <button type="button" class="btn-close" aria-label="Close"></button>
                             </div>
-                            <div class="text-body-tertiary fs-5 mb-4">ETH Market</div>
-
-                            <div class="shadow rounded p-3 mb-4">
-                                <div class="d-flex justify-content-between align-items-start mb-4">
-                                    <div class="d-flex align-items-center justify-content-start">
-                                        <img src="../../image/assets/wstETH.svg" alt="USDC" width="48">
-                                        <div style="padding-left: 0.7rem;">
-                                            <div class="fs-5 fw-medium">wstETH</div>
-                                            <div class="fs-6 text-body-secondary">Lido wrapped staked ether</div>
-                                        </div>
-                                    </div>
-                                    <div class="text-center">
-                                        <div class="fw-medium">Your balance</div> 
-                                        <div class="text-body-secondary">2.657</div>
-                                        <div class="text-body-tertiary" style="font-size: 75%;">$3.40K</div>
-                                    </div>
-                                    <div class="d-flex flex-column">
-                                        <button type="button" class="btn btn-primary text-white btn-sm mb-2">Deposit</button>
-                                        <button type="button" class="btn btn-primary text-white btn-sm">Withdraw</button>
-                                    </div>
+                            <div class="d-flex border p-3 rounded mb-2">
+                                <div class="flex-grow-1">
+                                    <h1 class="m-0">0</h1>
+                                    <small class="text-body-tertiary">$0.00</small>
                                 </div>
-                                <div class="d-flex text-body-secondary text-center small">
-                                    <div class="flex-fill border-end p-2">Loan to value : <span class="opacity-75">80%</span></div>
-                                    <div class="flex-fill p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
+                                <div>
+                                    <button type="button" class="btn btn-light border border-light-subtle rounded-4 mb-2">
+                                        <div class="d-flex align-items-center">
+                                            <img src="../../image/assets/USDC.svg" alt="USDC" width="30"> 
+                                            <span class="px-3">USDC</span> 
+                                        </div>
+                                    </button>
+                                    <div class="text-center text-body-secondary small">Balance : <span class="text-body-tertiary">$1.43K</span></div>
                                 </div>
                             </div>
-
-                            <div class="shadow rounded p-3">
-                                <div class="d-flex justify-content-between align-items-center mb-3">
-                                    <div class="d-flex align-items-center justify-content-start">
-                                        <img src="../../image/assets/cbETH.svg" alt="USDC" width="40">
-                                        <div class="ps-2">
-                                            <div>cbETH</div>
-                                            <small class="text-body-tertiary">Coinbase wrapped staked ether</small>
-                                        </div>
-                                    </div>
-                                    <div class="text-center">
-                                        <div>Your balance</div> 
-                                        <div class="text-body-tertiary">0 <small class="opacity-75 ps-2">($0)</small></div>
-                                    </div>
-                                    <div class="d-flex flex-column">
-                                        <button type="button" class="btn btn-primary text-white btn-sm mb-2">Deposit</button>
-                                        <button type="button" class="btn btn-primary text-white btn-sm">Withdraw</button>
-                                    </div>
-                                </div>
-                                <div class="d-flex text-body-secondary text-center small">
-                                    <div class="flex-fill border-end p-2">Loan to value : <span class="opacity-75">80%</span></div>
-                                    <div class="flex-fill border-end p-2">Liquidation threshold : <span class="opacity-75">85%</span></div>
-                                    <div class="flex-fill p-2">Liquidation penalty : <span class="opacity-75">10%</span></div>
-                                </div>
+                            <div class="row g-2 mb-4">
+                                <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">25%</button></div>
+                                <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">50%</button></div>
+                                <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">75%</button></div>
+                                <div class="col"><button type="button" class="btn btn-light btn-sm text-secondary w-100">Max</button></div>
                             </div>
 
+                            <div class="d-grid">
+                                <button class="btn btn-lg btn-primary text-white" type="button">Withdraw USDC</button>
+                              </div>
                         </div>
                     </div>
                 </div>
