--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
         <h1>Compound Proto</h1>
         <ul class="mb-5">
           <li><a href="template/template.html">General template</a></li>
+          <li><a href="template/template.2.html">General template - Not connected</a></li>
+          <li><a href="template/template.3.html">General template - Connected</a></li>
+          <li><a href="template/template.4.html">General template - Connected #2</a></li>
+          <li><a href="template/template.5.html">General template - Connected #3</a></li>
         </ul>
 
         <h2>Compound III</h2>
         <ul>
           <li>Borrow
             <ul>
-              <li><a href="v3/borrow/borrow.4.html">Main #4</a></li>
-              <li><a href="v3/borrow/select-asset.2.html">Select asset #2</a></li>
-              <li><a href="v3/borrow/select-asset.4.html">Select asset #4</a></li>
-              <li><a href="v3/borrow/collateral.3.html">Manage collateral #3</a></li>
-              <li><a href="v3/borrow/collateral.4.html">Manage collateral #4</a></li>
-              <li><a href="v3/borrow/collateral.5.html">Manage collateral #5</a></li>
+              <li><a href="v3/borrow/borrow.html">Main #1</a></li>
+              <li><a href="v3/borrow/borrow.2.html">Main #2</a></li>
+              <li><a href="v3/borrow/borrow.3.html">Main #3</a></li>
+              <li><a href="v3/borrow/select-asset.2.html">Select asset #1</a></li>
+              <li><a href="v3/borrow/select-asset.4.html">Select asset #2</a></li>
+              <li><a href="v3/borrow/collateral.3.html">Manage collateral #1</a></li>
+              <li><a href="v3/borrow/collateral.4.html">Manage collateral #2</a></li>
+              <li><a href="v3/borrow/collateral.5.html">Manage collateral #3</a></li>
             </ul>
           </li>
         </ul>
@@ -48,6 +54,7 @@
           <li>Claim
             <ul>
               <li><a href="v3/claim/claim.html">Claim</a></li>
+              <li><a href="v3/claim/claim.2.html">Claim #2</a></li>
             </ul>
           </li>
         </ul>
