--- a/v3/claim/claim.2.html
+++ b/v3/claim/claim.2.html
@@ -70,10 +70,7 @@
                               <h2 class="m-0">Claim</h2>
                               <div class="small text-center">
                                 <div class="fw-semibold mb-1">Total rewards</div> 
-                                <div class="d-flex align-items-center mb-1">
-                                  <img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;">
-                                  <div class="text-body-secondary me-2">25.657</div><div class="text-body-tertiary">($2.63K)</div>
-                                </div>
+                                <div class="text-body-secondary">$2.63K</div>
                               </div>
                             </div>
 
@@ -82,7 +79,7 @@
                                   <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                       <div class="d-flex align-items-center me-auto"><img src="../../image/Ethereum.svg" style="width: 1.8rem;" alt="Ethereum"><div class="fw-semibold ms-2">Ethereum</div></div>
-                                      <span class="badge rounded-pill text-bg-light me-3">Rewards</span>
+                                      <div class="d-flex align-items-center small rounded-5 text-bg-light p-2 me-3"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> Rewards</div>
                                     </button>
                                   </h2>
                                   <div id="collapseOne" class="accordion-collapse collapse">
@@ -175,7 +172,7 @@
                                   <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                                       <div class="d-flex align-items-center me-auto"><img src="../../image/Polygon.svg" style="width: 1.8rem;" alt="Polygon"> <div class="fw-semibold ms-2">Polygon</div></div>
-                                      <span class="badge rounded-pill text-bg-light me-3">Rewards</span>
+                                      <div class="d-flex align-items-center small rounded-5 text-bg-light p-2 me-3"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> Rewards</div>
                                     </button>                                    
                                   </h2>
                                   <div id="collapseThree" class="accordion-collapse collapse">
