Update general template

--- a/index.html
+++ b/index.html
@@ -14,23 +14,20 @@
         <ul class="mb-5">
           <li><a href="template/template.html">General template</a></li>
           <li><a href="template/template.2.html">General template - Not connected</a></li>
-          <li><a href="template/template.3.html">General template - Connected</a></li>
-          <li><a href="template/template.4.html">General template - Connected #2</a></li>
-          <li><a href="template/template.5.html">General template - Connected #3</a></li>
+          <li><a href="template/template.4.html">General template - Connected #1</a></li>
+          <li><a href="template/template.5.html">General template - Connected #2</a></li>
+          <li><a href="template/template.6.html">General template - Connected #3</a></li>
         </ul>
 
         <h2>Compound III</h2>
         <ul>
           <li>Borrow
             <ul>
-              <li><a href="v3/borrow/borrow.html">Main #1</a></li>
-              <li><a href="v3/borrow/borrow.2.html">Main #2</a></li>
-              <li><a href="v3/borrow/borrow.3.html">Main #3</a></li>
-              <li><a href="v3/borrow/select-asset.2.html">Select asset #1</a></li>
-              <li><a href="v3/borrow/select-asset.4.html">Select asset #2</a></li>
-              <li><a href="v3/borrow/collateral.3.html">Manage collateral #1</a></li>
-              <li><a href="v3/borrow/collateral.4.html">Manage collateral #2</a></li>
-              <li><a href="v3/borrow/collateral.5.html">Manage collateral #3</a></li>
+              <li><a href="v3/borrow/borrow.2.html">Main #1</a></li>
+              <li><a href="v3/borrow/borrow.4.html">Main #2</a></li>
+              <li><a href="v3/borrow/select-asset.4.html">Select asset</a></li>
+              <li><a href="v3/borrow/collateral.4.html">Manage collateral #1</a></li>
+              <li><a href="v3/borrow/collateral.5.html">Manage collateral #2</a></li>
             </ul>
           </li>
         </ul>
@@ -38,12 +35,10 @@
         <ul>
           <li>Farm
             <ul>
-              <li><a href="v3/farm/assets-list.html">Assets list #1</a></li>
-              <li><a href="v3/farm/assets-list.2.html">Assets list #2</a></li>
-              <li><a href="v3/farm/assets-list.3.html">Assets list #3</a></li>
+              <li><a href="v3/farm/assets-list.3.html">Assets list #1</a></li>
+              <li><a href="v3/farm/assets-list.4.html">Assets list #2</a></li>
               <li><a href="v3/farm/supply.html">Supply #1</a></li>
-              <li><a href="v3/farm/supply.2.html">Supply #2</a></li>
-              <li><a href="v3/farm/supply.3.html">Supply #3</a></li>
+              <li><a href="v3/farm/supply.3.html">Supply #2</a></li>
               <li><a href="v3/farm/withdraw.html">Withdraw #1</a></li>
               <li><a href="v3/farm/withdraw.2.html">Withdraw #2</a></li>              
             </ul>
@@ -53,20 +48,7 @@
         <ul>
           <li>Claim
             <ul>
-              <li><a href="v3/claim/claim.html">Claim</a></li>
-              <li><a href="v3/claim/claim.2.html">Claim #2</a></li>
-            </ul>
-          </li>
-        </ul>
-
-        <ul>
-          <li>Dashboard
-            <ul>
-              <li><a href="v3/dashboard/overview.1.html">Overview #1</a></li>
-              <li><a href="v3/dashboard/overview.2.html">Overview #2</a></li>
-              <li><a href="v3/dashboard/overview.3.html">Overview #3</a></li>
-              <li><a href="v3/dashboard/overview.4.html">Overview #4</a></li>
-              <li><a href="v3/dashboard/overview.5.html">Overview #5</a></li>
+              <li><a href="v3/claim/claim.3.html">Claim</a></li>
             </ul>
           </li>
         </ul>
