--- a/v3/borrow/borrow.2.html
+++ b/v3/borrow/borrow.2.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 ms-lg-auto p-5">
-                <div class="row">
+                <div class="row g-5">
                     <div class="col-12 col-lg-7 col-xxl-6">
                         <div class="bg-body p-3 rounded shadow">
                             <h2 class="mb-4">Borrow</h2>
@@ -72,9 +72,9 @@
                                     <h1 class="m-0">0</h1>
                                     <small  class="text-body-tertiary">$0.00</small>
                                 </div>
-                                <button type="button" class="btn btn-lg btn-light border border-light-subtle rounded-4">
+                                <button type="button" class="btn btn-lg btn-light border border-light-subtle rounded-5">
                                     <div class="d-flex align-items-center">
-                                        <img src="../../image/assets/USDC.svg" alt="USDC" width="40"> 
+                                        <img src="../../image/assets/USDC.svg" alt="USDC" width="35"> 
                                         <span class="px-3">USDC</span> 
                                         <i class="bi bi-chevron-down"></i>
                                     </div>
@@ -86,7 +86,7 @@
                                     <a href="#" class="text-decoration-none">Augmenter votre capacité d'emprunt <i class="bi bi-arrow-right"></i></a>
                                 </div>
                                 <div class="d-flex align-items-start">
-                                    <small class="px-2 py-1 me-1 border rounded">Borrow APR : <span class="text-body-tertiary">4.12%</span></small>
+                                    <small class="px-2 py-1 me-1 shadow-sm rounded">Borrow APR : <span class="text-body-tertiary">4.12%</span></small>
                                 </div>
                             </div>
                             <div class="d-grid">
