--- a/v3/borrow/select-asset.4.html
+++ b/v3/borrow/select-asset.4.html
@@ -74,7 +74,7 @@
 
                             <div class="mb-2">
 
-                                <div class="shadow rounded p-3">
+                                <div class="shadow rounded p-3 mb-4">
                                     <div class="d-flex justify-content-between align-items-center mb-3">
                                         <div class="d-flex justify-content-start">
                                             <img src="../../image/assets/USDC.svg" alt="USDC" width="40">
@@ -94,8 +94,6 @@
                                         <div  class="text-body-tertiary" style="padding-top: 3px;"><i class="bi bi-caret-down-fill"></i></div>
                                     </div>
                                 </div>
-
-                                <div class="border-bottom border-light-subtle my-4"></div>
 
                                 <div  class="shadow rounded p-3">
                                     <div class="d-flex justify-content-between align-items-center mb-3">
