--- a/v3/claim/claim.3.html
+++ b/v3/claim/claim.3.html
@@ -78,7 +78,7 @@
                                 <div class="accordion-item">
                                   <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                      <div class="d-flex align-items-center me-auto"><img src="../../image/Ethereum.svg" style="width: 1.8rem;" alt="Ethereum"><div class="fw-semibold ms-2">Ethereum</div></div>
+                                      <div class="d-flex align-items-center me-auto"><img src="../../image/Ethereum.svg" style="width: 1.8rem;" alt="Ethereum"><div class="fs-5 ms-3">Ethereum</div></div>
                                       <div class="d-flex align-items-center small rounded-5 text-bg-light p-2 me-3"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> Rewards</div>
                                     </button>
                                   </h2>
@@ -125,7 +125,7 @@
                                 <div class="accordion-item">
                                   <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                      <div class="d-flex align-items-center me-auto"><img src="../../image/Arbitrum.svg" style="width: 1.8rem;" alt="Arbitrum"> <div class="fw-semibold ms-2">Arbitrum</div></div>
+                                      <div class="d-flex align-items-center me-auto"><img src="../../image/Arbitrum.svg" style="width: 1.8rem;" alt="Arbitrum"> <div class="fs-5 ms-3">Arbitrum</div></div>
                                     </button>
                                   </h2>
                                   <div id="collapseTwo" class="accordion-collapse collapse">
@@ -171,7 +171,7 @@
                                 <div class="accordion-item">
                                   <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-                                      <div class="d-flex align-items-center me-auto"><img src="../../image/Polygon.svg" style="width: 1.8rem;" alt="Polygon"> <div class="fw-semibold ms-2">Polygon</div></div>
+                                      <div class="d-flex align-items-center me-auto"><img src="../../image/Polygon.svg" style="width: 1.8rem;" alt="Polygon"> <div class="fs-5 ms-3">Polygon</div></div>
                                       <div class="d-flex align-items-center small rounded-5 text-bg-light p-2 me-3"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> Rewards</div>
                                     </button>                                    
                                   </h2>
@@ -206,7 +206,7 @@
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
                                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                        <div class="d-flex align-items-center me-auto"><img src="../../image/Base.svg" style="width: 1.8rem;" alt="Base"> <div class="fw-semibold ms-2">Base</div></div>
+                                        <div class="d-flex align-items-center me-auto"><img src="../../image/Base.svg" style="width: 1.8rem;" alt="Base"> <div class="fs-5 ms-3">Base</div></div>
                                       </button>
                                     </h2>
                                     <div id="collapseFour" class="accordion-collapse collapse">
