--- a/v3/farm/assets-list.3.html
+++ b/v3/farm/assets-list.3.html
@@ -68,7 +68,7 @@
                             <h2 class="mb-4">Farm</h2> 
                             <div class="row">
                                 <div class="col">
-                                    <div class="row text-body-tertiary mx-3 mb-2">
+                                    <div class="row text-body-tertiary mx-3 mb-3">
                                         <div class="col text-start">
                                           Asset
                                         </div>
@@ -78,54 +78,54 @@
                                         <div class="col text-center">
                                             Your balance
                                         </div>
-                                        <div class="col text-end">
+                                        <div class="col text-center">
                                           APR
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row align-items-center px-3 py-4 mx-2 mb-4 rounded shadow">
+                            <div class="asset-item row align-items-center px-3 py-4 mx-2 mb-4 rounded shadow">
                                 <div class="col">
                                     <div class="d-flex justify-content-start">
-                                        <img src="../../image/assets/USDC.svg" alt="USDC" width="40">
+                                        <img src="../../image/assets/USDC.svg" alt="USDC" width="42">
                                         <div class="ps-2">
-                                            <div>USDC</div>
-                                            <small>USD Coin</small>
+                                            <div class="mb-1">USDC</div>
+                                            <small class="text-body-secondary">USD Coin</small>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col text-center">
-                                    <div>731.86M</div>
-                                    <small>$731.86M</small>
+                                    <div class="mb-1">731.86M</div>
+                                    <small class="text-body-secondary">$731.86M</small>
                                 </div>
                                 <div class="col text-center">
-                                    <div>1.64K</div>
-                                    <small>$1.64K</small>
+                                    <div class="mb-1">1.61K</div>
+                                    <small class="text-body-secondary">$1.60K</small>
                                 </div>
-                                <div class="col text-end">
-                                  7.12% <i class="bi bi-info-square"></i>
+                                <div class="col text-center">
+                                  7.12<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1"></i>
                                 </div>
                             </div>
-                            <div class="row align-items-center px-3 py-4 mx-2 mb-3 rounded  shadow">
+                            <div class="asset-item row align-items-center px-3 py-4 mx-2 mb-3 rounded  shadow">
                                 <div class="col">
                                     <div class="d-flex justify-content-start">
-                                        <img src="../../image/assets/ETH.svg" alt="ETH" width="40">
+                                        <img src="../../image/assets/ETH.svg" alt="ETH" width="42">
                                         <div class="ps-2">
-                                            <div>ETH</div>
-                                            <small>Ether</small>
+                                            <div class="mb-1">ETH</div>
+                                            <small class="text-body-secondary">Ether</small>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col text-center">
-                                    <div>32,357.30</div>
-                                    <small>$23.65M</small>
+                                    <div class="mb-1">32,357.30</div>
+                                    <small class="text-body-secondary">$23.65M</small>
                                 </div>
                                 <div class="col text-center">
-                                    <div>1.3</div>
-                                    <small>$1.85K</small>
+                                    <div class="mb-1">3.23</div>
+                                    <small class="text-body-secondary">$6.54K</small>
                                 </div>
-                                <div class="col text-end">
-                                  2.17% <i class="bi bi-info-square"></i>
+                                <div class="col text-center">
+                                  2.17<small class="text-body-secondary">%</small> <i class="bi bi-info-square text-body-tertiary ms-1"></i>
                                 </div>
                             </div>
                         </div>
